--- a/NotesApp.Test/NotesApp.Test.csproj
+++ b/NotesApp.Test/NotesApp.Test.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NotesApp.Persistence\NotesApp.Persistence.csproj" />
+    <ProjectReference Include="..\NotesApp.ViewModels\NotesApp.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
